# egui_double_slider

./: CHANGELOG.MD  Cargo.toml  README.MD
.github/workflows/: changelog.yml
examples/: example.rs
src/: double_slider.rs  lib.rs
